<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assignment_msg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alberto@casd.com">casd</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <!-- Dependencies for custom messages -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Dpendencies for the construction -->
  <depend>std_msgs</depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <!-- Required for interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
